[package]
name = "drift-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "drift-monitor"
path = "src/main.rs"

[dependencies]
unshred = { path = "../..", features = ["metrics"] }

anyhow = "1.0.98"
bincode = "=1.3.3" # Solana compatibility
bs58 = "0.5"
clickhouse = "0.13.3"
prometheus = "0.14.0"
rand = "0.9.1"
serde = "1.0.219"
sha2 = "0.10.9"
solana-entry = "=3.1.10"
solana-hash = "3.1"
solana-instruction = "3.2"
solana-keypair = "=3.1.0"
solana-ledger = { version = "=3.1.10", features = ["agave-unstable-api"] }
solana-message = "3.1"
solana-pubkey = "3.0"
solana-signature = "3.1"
solana-signer = "3.0"
solana-system-interface = { version = "3.1", features = ["bincode"] }
solana-transaction = "3.1"
sysinfo = "0.36.0"
tokio = "1.46.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
warp = "0.3.7"
